--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <!-- ABOUT Section -->
             <div class="split-features" id="about">
                 <div class="col-md-6 nopadding">
-                    <div class="split-image"> <img class="img-responsive wow fadeIn" src="images/app_image.png" alt="Image" width="80%" height="100%" /> </div>
+                    <div class="split-image"> <img class="img-responsive wow fadeIn" src="images/BRKN-15.jpg" alt="Image" width="80%" height="100%" /> </div>
                 </div>
                 <div class="col-md-6 nopadding">
                     <div class="split-content">
