--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Berkendararia</title>
+    <title>BERKENDARA RIA</title>
     <link rel="icon" href="images/favicon.png" type="image/png" sizes="16x16">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="BERKENDARARIA">
-    <meta name="keywords" content="BERKENDARARIA">
+    <meta name="description" content="BERKENDARA RIA">
+    <meta name="keywords" content="BERKENDARA RIA">
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
     <link rel="stylesheet" href="css/animate.css">
@@ -27,7 +27,7 @@
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header page-scroll">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-                        <a class="navbar-brand page-scroll" href="#main"><img src="images/logo-berkendararia.png" width="150" height="45" alt="BERKENDARARIA" /></a>
+                        <a class="navbar-brand page-scroll" href="#main"><img src="images/logo-BERKENDARA RIA.png" width="150" height="45" alt="BERKENDARA RIA" /></a>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
@@ -52,7 +52,7 @@
                 <div class="container nopadding">
                     <div class="col-md-12">
                         <div class="hero-content text-center">
-                            <h1 class="wow fadeInUp" data-wow-delay="0.1s">BERKENDARARIA</h1>
+                            <h1 class="wow fadeInUp" data-wow-delay="0.1s">BERKENDARA RIA</h1>
 
                             <!--<p class="wow fadeInUp" data-wow-delay="0.2s"> Bring to the table win-win survival strategies to ensure proactive domination. </p>-->
                             <a href="https://www.facebook.com/edinburghuniversitymuaythai/" class="btn btn-action wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">Facebook</a>
@@ -155,9 +155,9 @@
                             <br>
                             <br> Here are some of the fights throughout the year:
                             <ul class="wow fadeInUp">
-                                <li>Berkendararia Yogyakarta Ride Night</li>
+                                <li>BERKENDARA RIA Yogyakarta Ride Night</li>
                                 <li>All Bike Club</li>
-                                <li>BERKENDARARIA Ride Night</li>
+                                <li>BERKENDARA RIA Ride Night</li>
                                 <li>Stirling University Ride Night</li>
                                 <li>Glasgow Caledonian University Ride Night</li>
                             </ul>
