--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header page-scroll">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-                        <a class="navbar-brand page-scroll" href="#main"><img src="images/logo-BERKENDARA RIA.png" width="150" height="45" alt="BERKENDARA RIA" /></a>
+                        <a class="navbar-brand page-scroll" href="#main"><img src="images/logo-berkendararia.png" width="150" height="45" alt="BERKENDARA RIA" /></a>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
