feat: Introduce blog section with new articles and update navigation and sitemap.

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                 <li><a href="#about">Tentang</a></li>
                 <li><a href="#jadwal">Jadwal</a></li>
                 <li><a href="#event">Event</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="#membership">Membership</a></li>
                 <li><a href="#gabung">Gabung</a></li>
             </ul>
@@ -379,6 +380,7 @@
                         <li><a href="#about">Tentang</a></li>
                         <li><a href="#jadwal">Jadwal</a></li>
                         <li><a href="#event">Event</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                         <li><a href="#membership">Membership</a></li>
                     </ul>
                 </div>
