feat: Add new articles for 'Jogja Sunday Ride' and 'Profil Berkendara Ria', updating the blog and sitemap.

--- a/blog.html
+++ b/blog.html
@@ -44,25 +44,42 @@
                 </div>
 
                 <div class="schedule-grid" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));">
-                    <!-- Article 1 -->
-                    <article class="schedule-card reveal" style="text-align: left;">
-                        <img src="images/BRKN-15.jpg" alt="Tips Touring Aman"
+                    <!-- Article 1: Jogja Sunday Ride (Featured) -->
+                    <article class="schedule-card reveal" style="text-align: left; border: 1px solid var(--primary);">
+                        <img src="images/BRKN-15.jpg" alt="Jogja Sunday Ride"
                             style="width: 100%; height: 200px; object-fit: cover; border-radius: 8px; margin-bottom: 15px;">
-                        <div class="schedule-day" style="font-size: 1rem;">Tips & Safety</div>
-                        <h2 class="schedule-type" style="font-size: 1.5rem;"><a href="articles/tips-touring-aman.html"
-                                style="color: var(--text-primary);">5 Tips Touring Motor Aman untuk Pemula</a></h2>
-                        <p class="schedule-info">Persiapan fisik dan motor itu wajib sebelum gas pol jarak jauh. Simak
-                            checklist lengkapnya di sini.</p>
-                        <a href="articles/tips-touring-aman.html"
+                        <div class="schedule-day" style="font-size: 1rem; color: var(--primary-light);">🔥 Terpopuler
+                        </div>
+                        <h2 class="schedule-type" style="font-size: 1.5rem;"><a href="articles/jogja-sunday-ride.html"
+                                style="color: var(--text-primary);">Jogja Sunday Ride: Lebarannya Anak Motor Jogja</a>
+                        </h2>
+                        <p class="schedule-info">Agenda sunmori terbesar yang menyatukan ribuan bikers tanpa skat cc.
+                            Simak rute dan jadwal terbarunya di sini.</p>
+                        <a href="articles/jogja-sunday-ride.html"
                             style="display: inline-block; margin-top: 15px; color: var(--primary-light); font-weight: 600;">Baca
                             Selengkapnya →</a>
                     </article>
 
-                    <!-- Article 2 -->
+                    <!-- Article 2: Profil Berkendara Ria -->
+                    <article class="schedule-card reveal" style="text-align: left;">
+                        <img src="images/logo-berkendararia.png" alt="Profil Komunitas"
+                            style="width: 100%; height: 200px; object-fit: contain; background: rgba(0,0,0,0.2); border-radius: 8px; margin-bottom: 15px;">
+                        <div class="schedule-day" style="font-size: 1rem;">Profile</div>
+                        <h2 class="schedule-type" style="font-size: 1.5rem;"><a
+                                href="articles/profil-berkendara-ria.html" style="color: var(--text-primary);">Mengenal
+                                "Berkendara Ria": Lebih Dari Sekadar Komunitas</a></h2>
+                        <p class="schedule-info">Lahir dari angkringan, tumbuh menjadi keluarga. Visi misi kami
+                            membangun brotherhood yang asik dan safety.</p>
+                        <a href="articles/profil-berkendara-ria.html"
+                            style="display: inline-block; margin-top: 15px; color: var(--primary-light); font-weight: 600;">Baca
+                            Selengkapnya →</a>
+                    </article>
+
+                    <!-- Article 3: Rute Sunmori -->
                     <article class="schedule-card reveal" style="text-align: left;">
                         <img src="images/header-bg.jpg" alt="Rute Sunmori Jogja"
                             style="width: 100%; height: 200px; object-fit: cover; border-radius: 8px; margin-bottom: 15px;">
-                        <div class="schedule-day" style="font-size: 1rem;">Rekomendasi Rute</div>
+                        <div class="schedule-day" style="font-size: 1rem;">Rekomendasi</div>
                         <h2 class="schedule-type" style="font-size: 1.5rem;"><a href="articles/rute-sunmori-jogja.html"
                                 style="color: var(--text-primary);">3 Rute Sunmori Terbaik di Jogja dengan View Epic</a>
                         </h2>
