--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@
                 <p class="hero-subtitle reveal">
                     Bergabunglah dengan Berkendara Ria — komunitas rider Yogyakarta yang seru, solid, dan selalu siap
                     gas touring bareng ke destinasi terbaik!
+                    <br><br>
+                    <span
+                        style="font-size: 0.9rem; opacity: 0.8; background: rgba(255,255,255,0.1); padding: 5px 12px; border-radius: 20px; display: inline-block; margin-top: 10px;">
+                        🤝 Official Partner: <strong>RC Ceria Yogyakarta</strong>
+                    </span>
                 </p>
                 <div class="hero-buttons reveal">
                     <a href="#gabung" class="btn-modern btn-primary">Gabung Sekarang</a>
