feat: Add a comprehensive modern design system by creating `modern.css` and modifying `index.html` to integrate it.

--- a/index.html
+++ b/index.html
@@ -275,6 +275,61 @@
             </div>
         </section>
 
+        <!-- Photographer Section -->
+        <section class="section-modern" id="galeri"
+            style="background: linear-gradient(180deg, transparent, rgba(0,0,0,0.3));">
+            <div class="section-container">
+                <div class="section-header">
+                    <span class="section-tag reveal">Di Balik Layar</span>
+                    <h2 class="section-title reveal">Lensa Berkendara Ria</h2>
+                    <p class="section-desc reveal">Abadikan setiap momen sunmori dan touring dengan karya terbaik dari
+                        fotografer andalan kami.</p>
+                </div>
+
+                <div class="photographer-grid">
+                    <!-- Photographer 1 -->
+                    <div class="photographer-card reveal">
+                        <img src="images/BRKN-15.jpg" alt="Raka 'Lens' Aditya" class="photographer-img">
+                        <h3 class="photographer-name">Raka "Lens" Aditya</h3>
+                        <div class="photographer-role">Chief Photographer</div>
+                        <p class="photographer-bio">Spesialis rolling shot dan candid moment. Karyanya selalu menangkap
+                            emosi setiap rider.</p>
+                        <div class="social-links-photographer">
+                            <a href="#" class="social-link">📸</a>
+                            <a href="#" class="social-link">🌐</a>
+                        </div>
+                    </div>
+
+                    <!-- Photographer 2 -->
+                    <div class="photographer-card reveal" style="animation-delay: 0.2s;">
+                        <img src="images/header-bg.jpg" alt="Dinda Shutter" class="photographer-img">
+                        <h3 class="photographer-name">Dinda Shutter</h3>
+                        <div class="photographer-role">Creative Director</div>
+                        <p class="photographer-bio">Ahli dalam framing landscape dan cinematic video. Membuat setiap
+                            rute terlihat epik.</p>
+                        <div class="social-links-photographer">
+                            <a href="#" class="social-link">📸</a>
+                            <a href="#" class="social-link">🎥</a>
+                        </div>
+                    </div>
+
+                    <!-- Photographer 3 -->
+                    <div class="photographer-card reveal" style="animation-delay: 0.4s;">
+                        <img src="images/logo-berkendararia.png" alt="Bayu Drone" class="photographer-img"
+                            style="object-fit: contain; background: white;">
+                        <h3 class="photographer-name">Bayu Drone</h3>
+                        <div class="photographer-role">Aerial Specialist</div>
+                        <p class="photographer-bio">Melihat touring dari perspektif burung. Pilot drone bersertifikat
+                            dengan visual memukau.</p>
+                        <div class="social-links-photographer">
+                            <a href="#" class="social-link">✈️</a>
+                            <a href="#" class="social-link">📸</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Membership Section -->
         <section class="section-modern membership-modern" id="membership">
             <div class="section-container">
