feat: Implement a new modern design system by adding `modern.css` and updating `index.html` to integrate its styles.

--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
 
                     <!-- Photographer 3 -->
                     <div class="photographer-card reveal" style="animation-delay: 0.4s;">
-                        <img src="images/logo-berkendararia.png" alt="Bayu Drone" class="photographer-img"
-                            style="object-fit: contain; background: white;">
+                        <img src="images/BRKN-15.jpg" alt="Bayu Drone" class="photographer-img"
+                            style="filter: hue-rotate(45deg);">
                         <h3 class="photographer-name">Bayu Drone</h3>
                         <div class="photographer-role">Aerial Specialist</div>
                         <p class="photographer-bio">Melihat touring dari perspektif burung. Pilot drone bersertifikat
