--- a/index.html
+++ b/index.html
@@ -287,47 +287,48 @@
                 </div>
 
                 <div class="photographer-grid">
-                    <!-- Photographer 1 -->
-                    <div class="photographer-card reveal">
-                        <img src="images/BRKN-15.jpg" alt="Raka 'Lens' Aditya" class="photographer-img">
-                        <h3 class="photographer-name">Raka "Lens" Aditya</h3>
-                        <div class="photographer-role">Chief Photographer</div>
-                        <p class="photographer-bio">Spesialis rolling shot dan candid moment. Karyanya selalu menangkap
-                            emosi setiap rider.</p>
-                        <div class="social-links-photographer">
-                            <a href="#" class="social-link">📸</a>
-                            <a href="#" class="social-link">🌐</a>
+                    <div class="photographer-grid">
+                        <!-- Photographer 1 -->
+                        <div class="photographer-card reveal">
+                            <img src="images/2.jpg" alt="Raka 'Lens' Aditya" class="photographer-img" loading="lazy">
+                            <h3 class="photographer-name">Raka "Lens" Aditya</h3>
+                            <div class="photographer-role">Chief Photographer</div>
+                            <p class="photographer-bio">Spesialis rolling shot dan candid moment. Karyanya selalu
+                                menangkap emosi setiap rider.</p>
+                            <div class="social-links-photographer">
+                                <a href="#" class="social-link">📸</a>
+                                <a href="#" class="social-link">🌐</a>
+                            </div>
                         </div>
-                    </div>
 
-                    <!-- Photographer 2 -->
-                    <div class="photographer-card reveal" style="animation-delay: 0.2s;">
-                        <img src="images/header-bg.jpg" alt="Dinda Shutter" class="photographer-img">
-                        <h3 class="photographer-name">Dinda Shutter</h3>
-                        <div class="photographer-role">Creative Director</div>
-                        <p class="photographer-bio">Ahli dalam framing landscape dan cinematic video. Membuat setiap
-                            rute terlihat epik.</p>
-                        <div class="social-links-photographer">
-                            <a href="#" class="social-link">📸</a>
-                            <a href="#" class="social-link">🎥</a>
+                        <!-- Photographer 2 -->
+                        <div class="photographer-card reveal" style="animation-delay: 0.2s;">
+                            <img src="images/header-bg.jpg" alt="Dinda Shutter" class="photographer-img" loading="lazy">
+                            <h3 class="photographer-name">Dinda Shutter</h3>
+                            <div class="photographer-role">Creative Director</div>
+                            <p class="photographer-bio">Ahli dalam framing landscape dan cinematic video. Membuat setiap
+                                rute terlihat epik.</p>
+                            <div class="social-links-photographer">
+                                <a href="#" class="social-link">📸</a>
+                                <a href="#" class="social-link">🎥</a>
+                            </div>
                         </div>
-                    </div>
 
-                    <!-- Photographer 3 -->
-                    <div class="photographer-card reveal" style="animation-delay: 0.4s;">
-                        <img src="images/BRKN-15.jpg" alt="Bayu Drone" class="photographer-img"
-                            style="filter: hue-rotate(45deg);">
-                        <h3 class="photographer-name">Bayu Drone</h3>
-                        <div class="photographer-role">Aerial Specialist</div>
-                        <p class="photographer-bio">Melihat touring dari perspektif burung. Pilot drone bersertifikat
-                            dengan visual memukau.</p>
-                        <div class="social-links-photographer">
-                            <a href="#" class="social-link">✈️</a>
-                            <a href="#" class="social-link">📸</a>
+                        <!-- Photographer 3 -->
+                        <div class="photographer-card reveal" style="animation-delay: 0.4s;">
+                            <img src="images/photographer-2.png" alt="Bayu Drone" class="photographer-img"
+                                loading="lazy">
+                            <h3 class="photographer-name">Bayu Drone</h3>
+                            <div class="photographer-role">Aerial Specialist</div>
+                            <p class="photographer-bio">Melihat touring dari perspektif burung. Pilot drone
+                                bersertifikat dengan visual memukau.</p>
+                            <div class="social-links-photographer">
+                                <a href="#" class="social-link">✈️</a>
+                                <a href="#" class="social-link">📸</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
 
         <!-- Membership Section -->
